重构 项目路径获取
