# src/AterStudio/ClientApp/src/app/share/models/project/project.model.ts
@@ -4,12 +4,5 @@ export interface Project {
   name?: string | null;
   displayName?: string | null;
   path?: string | null;
-  entityPath?: string | null;
-  sharePath?: string | null;
-  applicationPath?: string | null;
-  httpPath?: string | null;
-  entityFrameworkPath?: string | null;
-  swaggerPath?: string | null;
-  webAppPath?: string | null;
 
 }
